# falak

./: BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/architecture/adr/: 001-eci-universal-coordinate-convention.md  002-feature-gated-optional-dependencies.md  003-dependency-free-bridges.md  004-universal-variables-for-lambert-solver.md  005-brouwer-mean-elements-over-kozai.md
docs/development/: roadmap.md
examples/: celestial_events.rs  hohmann_transfer.rs  lagrange_points.rs  nbody_simulation.rs  orbit_propagation.rs
scripts/: bench-history.sh  coverage.sh
src/: bridge.rs  cr3bp.rs  ephemeris.rs  error.rs  frame.rs  kepler.rs  lib.rs  logging.rs  maneuver.rs  nbody.rs  orbit.rs  perturbation.rs  propagate.rs  transfer.rs
src/integration/: soorat.rs
tests/: integration.rs
